support full flow through api (no emailing).

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,9 +1,12 @@
 ﻿{
-    "Logging": {
-        "LogLevel": {
-            "Default": "Debug",
-            "System": "Information",
-            "Microsoft": "Information"
-        }
+  "AppSettings": {
+    "LogRequests": false
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Debug",
+      "Microsoft": "Debug"
     }
+  }
 }
