--- a/appsettings.json
+++ b/appsettings.json
@@ -5,7 +5,8 @@
         "SmtpHost": "[ENTER YOUR OWN SMTP OPTIONS OR CREATE FREE TEST ACCOUNT IN ONE CLICK AT https://ethereal.email/]",
         "SmtpPort": 587,
         "SmtpUser": "",
-        "SmtpPass": ""
+        "SmtpPass": "",
+        "LogRequests":  false
     },
     "ConnectionStrings": {
         "WebApiDatabase": "Data Source=WebApiDatabase.db"
